--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,39 @@
 .classlanguage {
-  max-width: 600px;
-  max-height: 600px;
+  max-width: auto;
+  max-height: auto;
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+body {
+  background-color: khaki;
+}
+
+.programLang1 {
+  display: none;
+}
+
+.programLang2 {
+  display: none;
+}
+
+.programLang3 {
+  display: none;
+}
+
+.programLang4 {
+  display: none;
+}
+
+.programLang5 {
+  display: none;
+}
+
+.programLang6 {
+  display: none;
+}
