updated the radio questions and added more eleements to the styles.css sheet

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,11 @@
+.titleintro {
+  text-size-adjust: 80%;
+}
+
+.jumbotron {
+  background-color: lightblue;
+}
+
 .classlanguage {
   max-width: auto;
   max-height: auto;
